--- a/What's_new_in_C#/C#_11.md
+++ b/What's_new_in_C#/C#_11.md
@@ -82,3 +82,18 @@ Console.WriteLine(unchecked(x + y)); // -2  (오버플로우 무시)
 하지만, 해당 버전부터 완전히 같은 개념으로 바뀌어 자동으로 형변환까지 가능해졌습니다. 
 
 # 문자열 보간의 줄 바꿈
+이전까지 `{}` 내부의 표현식이 반드시 한 줄에 있어야 햤던 제한사항이 사라졌습니다.   
+```cs
+var number = 5;
+var message = $"결과: {
+    number switch
+    {
+        > 10 => "10보다 큼",
+        > 5 => "5보다 큼",
+        _ => "5 이하"
+    }
+}";
+
+Console.WriteLine(message);
+```
+C# 11 이후부터는 여러 줄에 걸친 표현식을 사용할 수 있습니다. 
