--- a/What's_new_in_C#/C#_11.md
+++ b/What's_new_in_C#/C#_11.md
@@ -82,7 +82,7 @@ Console.WriteLine(unchecked(x + y)); // -2  (오버플로우 무시)
 하지만, 해당 버전부터 완전히 같은 개념으로 바뀌어 자동으로 형변환까지 가능해졌습니다. 
 
 # 문자열 보간의 줄 바꿈
-이전까지 `{}` 내부의 표현식이 반드시 한 줄에 있어야 햤던 제한사항이 사라졌습니다.   
+이전까지 `{}` 내부의 표현식이 반드시 한 줄에 있어야 했던 제한사항이 사라졌습니다.   
 ```cs
 var number = 5;
 var message = $"결과: {
@@ -97,3 +97,44 @@ var message = $"결과: {
 Console.WriteLine(message);
 ```
 C# 11 이후부터는 여러 줄에 걸친 표현식을 사용할 수 있습니다. 
+
+# 리스트 패턴
+리스트 패턴 기능은, 리스트나 배열 같은 시퀀스 컬렉션의 내부 요소를 더 직관적으로 제공합니다.    
+```cs
+int[] numbers = [1, 2, 3];
+
+if(numbers is [1, 2, 3])
+{
+    Console.WriteLine("정확히 1,2,3");
+}
+
+if(numbers is [>= 1, 2, _])
+{
+    Console.WriteLine("""
+        첫번째는 1 이상,
+        두번째는 정확히 2,
+        세번째는 아무거나
+        """);
+}
+
+if(numbers is [1, ..])
+{
+    Console.WriteLine("첫번째는 정확히 1, 이후는 아무거나");
+}
+```
+위와 같이 `is`를 이용해 단순히 요소를 체크하는 것 이외에도 _패턴 매칭_ 기능도 사용 가능합니다.    
+
+# delegate로의 메서드 그룹 변환 최적화
+이전까지는, delegate를 사용할 때 같은 메서드를 가리키는 경우에도 다른 인스턴스를 생성했었습니다.       
+하지만 해당 버전부터는 같은 메서드 그룹의 delegate라면 기존 인스턴스를 캐시하여 사용할 수 있어졌습니다.
+```cs
+static void MyMethod() => Console.WriteLine("Hello World");
+
+Action myMethod1 = MyMethod;
+Action myMethod2 = MyMethod;
+
+Console.WriteLine(ReferenceEquals(myMethod1, myMethod2)); // True
+```
+다만, _성능 최적화를 위해 캐싱 개념을 허용을 하였다_ 인거지, **모든 경우에 반드시 같은 것이라 보장할 수는 없습니다**.
+
+# 원시 문자열 리터럴
