--- a/What's_new_in_C#/C#_11.md
+++ b/What's_new_in_C#/C#_11.md
@@ -138,3 +138,45 @@ Console.WriteLine(ReferenceEquals(myMethod1, myMethod2)); // True
 다만, _성능 최적화를 위해 캐싱 개념을 허용을 하였다_ 인거지, **모든 경우에 반드시 같은 것이라 보장할 수는 없습니다**.
 
 # 원시 문자열 리터럴
+`"""`로 시작하고 끝나는 원시 문자열 리터럴은 공백, 새 줄, 이스케이프 문자와 같은 처리를 번거롭게 하는 텍스트의 처리를 간편하게 합니다.
+```cs
+string w = "World";
+
+Console.WriteLine($"""
+    Hello
+    {w}
+    """);
+// Hello
+// World
+```
+줄바꿈, 보간과 관련된 부분도 직관적으로 이해할 수 있습니다.    
+단, 보간 시에 주의할 점이 있는데,
+```cs
+string w = "World";
+
+Console.WriteLine($"""
+    Hello
+    {{w}}
+    """);
+// 오류
+
+Console.WriteLine($$"""
+    Hello
+    {{{w}}}
+    """);
+
+// Hello
+// {World} 
+
+Console.WriteLine($$"""
+    Hello
+    {{w}}
+    """);
+// Hello
+// World
+
+```
+보간의 문법을 사용하기 위해 컴파일러는 {{ }}를 {}로 해석하는데,     
+첫번째 문장의 경우 {}를 위한 것인지 w의 보간을 위한 것인지 모호해 오류를 일으킵니다.
+
+# 자동 기본 구조체
