--- a/What's_new_in_C#/C#_11.md
+++ b/What's_new_in_C#/C#_11.md
@@ -180,3 +180,71 @@ Console.WriteLine($$"""
 첫번째 문장의 경우 {}를 위한 것인지 w의 보간을 위한 것인지 모호해 오류를 일으킵니다.
 
 # 자동 기본 구조체
+C# 11 이후 이전에는, 구조체의 모든 필드를 명시적으로 초기화해야 했습니다.     
+하지만 해당 버전부터 기본값의 개념이 생겨 초기화가 필수가 아니게 바뀌었습니다.    
+
+# Span과 ReadOnlySpan의 문자열에 대한 패턴 일치
+Span과 ReadOnlySpan은 연속된 메모리 영역을 안전하고 빠르게 다룰 수 있게 해주는 구조입니다.          
+다만 해당 버전 이전에는 `Span<char>`를 `string`에 대한 패턴매칭에 사용할 수 없었습니다.    
+하지만 이번 버전부터 가능해져, 좀 더 직관적인 코딩이 가능해졌습니다. 
+```cs
+ReadOnlySpan<char> h = "hello".AsSpan();
+if(h is "hello")
+{
+  Console.WriteLine("Hello!"); // Hello!
+}
+```
+
+# nameof를 특성에 사용
+멤버의 이름을 가져오는 `nameof` 파라미터는, 특성에 대해서는 영역 밖이라 판단해 사용할 수 없었습니다.       
+하지만, 이 부분이 개선되어 해당 버전 이후 특성의 파라미터에 대해서도 사용할 수 있게 되었습니다.    
+
+# UTF-8 문자열 리터럴
+기본적으로 _UTF-16_ 을 사용하는 C#에서, 일부 조작을 통해 UTF-8로 전환하여 사용할 수 있습니다.      
+이전 버전에서도 이 전환이 물론 가능했지만, 해당 버전부터 매우 간단한 방법으로 전환할 수 있게 되었습니다.
+```cs
+string h = "Hello";
+ReadOnlySpan<byte> utf8_1 = Encoding.UTF8.GetBytes(h);
+// C# 11 이전
+
+ReadOnlySpan<byte> utf8_2 = "Hello"u8;
+// C# 11 이후
+```
+`u8`과 같은 방식을 사용하면 타입은 `ReadOnlySpan<byte>`가 됩니다.    
+
+# 필수 멤버
+속성이나 필드에 `required`를 추가하여, 클래스나 구조체에서 특정 클래스가 _반드시_ 초기화 되어야 함을 설정할 수 있습니다.    
+```cs
+public class MyClass
+{
+  public required int RequiredMyInt;
+  public int MyInt;
+}
+```
+```cs
+MyClass myClass1 = new MyClass { RequiredMyInt = 1, MyInt = 1 }; // 정상 실행
+MyClass myClass2 = new MyClass { RequiredMyInt = 1 }; // 정상 실행
+MyClass myClass3 = new MyClass { myInt = 1 }; // 에러
+```
+
+# ref 확장
+1. ref 구조체에서의 ref 필드 선언 가능
+: 이전까지는 참조가 꼬일 것을 방지하기 위해 `ref struct` 안에서의 `ref` 필드 사용이 불가능했습니다.
+하지만 해당 버전부터 이러한 부분이 개선되었습니다.
+
+2. scoped 지정 가능
+: `ref` 키워드를 사용하면, 해당 참조가 외부에서 사용되어 위험한 메모리를 참조할 가능성을 염두했어야 했습니다.
+하지만 `scoped`를 명시적으로 지정하여, 해당 범위에서만 사용 가능하게 설정할 수 있습니다.
+```cs
+void MyMethod(scoped ref int myInt)
+{
+  // myInt는 해당 메서드에서 밖에 사용할 수 없음
+}
+```
+
+# file 접근 제한자
+기존의 `public`, `internal`, `protected`, `private`에 이어, `file` 접근 제한자가 사용 가능해졌습니다.      
+이름에서 알 수 있듯이 _같은 파일 내에서만_ 사용 가능하게 하는 접근 제한자입니다. 
+```cs
+file class MyClass {}
+```
