--- a/What's_new_in_C#/C#_12.md
+++ b/What's_new_in_C#/C#_12.md
@@ -15,3 +15,25 @@ myClass.MyMethod(); // Hello World
 ```
 
 # 컬렉션 식
+배열, 리스트 등의 컬렉션 객체를 간단한 문법으로 생성할 수 있게 하는 컬렉션 식의 개념이 도입되었습니다.       
+기존의 new 키워드로 인한 선언이 필요 없어졌으며, 컬렉션 객체들의 일관된 선언이 가능해져 효율성에 큰 도움을 줍니다.
+```cs
+int[] array = [1, 2, 3];
+List<string> list = ["Hello", "World"];
+int[][] twoDArray = [[1, 2, 3], [4, 5, 6]];
+```
+또한 `..e`와 같은, Spread라 불리는 방법은 _컬렉션 식의 모든 요소를 추가한다_ 라는 의미를 가져, 더 편히 여러 컬렉션을 다룰 수 있게 합니다.
+```cs
+int[] array1 = [1, 2, 3];
+int[] array2 = [4, 5, 6];
+int[] array3 = [7, 8, 9];
+
+int[] total = [..array1,..array2,..array3];
+foreach (int t in total)
+{
+    Console.Write($"{t} ");
+    // 1 2 3 4 5 6 7 8 9
+}
+```
+
+# ref readonly 파라미터
