--- a/What's_new_in_C#/C#_12.md
+++ b/What's_new_in_C#/C#_12.md
@@ -37,3 +37,68 @@ foreach (int t in total)
 ```
 
 # ref readonly 파라미터
+
+## 참조형 키워드 정리
+`ref readonly` 설명에 앞서, 참조형 키워드를 정리하고자 합니다.      
+값 타입인 변수를 참조 형태로 하여 보낼 수 있게 하는 역할을 하는데,       
+큰 사이즈의 구조체 같이 값을 그대로 넘기는 것보다 참조 값만을 넘기는 것이 이득일 때 사용합니다.      
+
+크게 `ref`, `in`, `out`으로 나눌 수 있습니다.     
+
+```cs
+public static void RefMethod(ref int myInt)
+{
+  myInt = 10; // 쓰기 가능
+  Console.WriteLine(myInt); // 읽기 가능
+}
+
+public static void InMethod(in int myInt)
+{
+  myInt = 10; // 에러: in 키워드를 적용하면 쓰기 불가
+  Console.WriteLine(myInt); // 읽기 가능
+}
+
+public static void OutMethod(out int myInt)
+{
+  myInt = 10; // 쓰기 가능 (쓰지 않는 경우 오류 발생)
+  Console.WriteLine(myInt); // 읽기 가능
+}
+```
+기본적으로, `in`과 `out`은 `ref`의 확장 개념이라 생각하면 됩니다.      
+`in`은 읽기 전용으로 만드는 참조형 키워드입니다.      
+`out`은 값을 쓰지 않을 경우 에러가 발생하게 하는 키워드입니다. (이름대로 완전히 `in`과 반대의 역할을 하는 것이 아님)
+
+사용에 있어서도 일부 차이가 있는데,     
+```cs
+int initInt = 10;
+int notInitInt;
+
+RefMethod(initInt); // 에러: ref 키워드 생략 불가
+RefMethod(ref initInt);
+RefMethod(ref notInitInt); // 에러: 초기화되지 않은 변수 사용 불가
+
+InMethod(initInt); // in 키워드 생략 가능
+InMethod(in initInt);
+InMethod(in notInitInt); // 에러: 초기화되지 않은 변수 사용 불가
+
+OutMethod(initInt); // 에러: out 키워드 생략 불가
+OutMethod(out initInt);
+OutMethod(out notInitInt); // 초기화되지 않은 변수 사용 가능
+```
+기본적으로 `ref`에서 확장되었기 때문에, `ref`의 제한 사항에서 일부 추가되는 개념이라 생각하면 됩니다.
+
+- `in`은 키워드를 생략 가능합니다.
+- `out`은 초기화되지 않은 변수를 사용 가능합니다.
+  
+---
+
+## ref readonly 키워드
+
+C# 12 버전부터, `ref readonly`를 메서드의 파라미터에 사용할 수 있게 되었습니다.      
+이전에 `ref readonly`를 반환값의 의미로 사용하거나, 같은 역할을 할 수 있는 `in` 키워드가 존재는 했지만,      
+해당 버전부터 파라미터에 `ref readonly`가 사용 가능해졌습니다.    
+
+이는 이전 API 코드 중  `ref` 키워드를 사용했지만 실제로는 `in` 키워드로 충분하여 범위를 줄이려는 경우,      
+호출 방식으로 인한 코드의 불필요한 수정을 막고자 도입된 것입니다.   
+
+# 기본 람다 매개변수
