--- a/What's_new_in_C#/C#_12.md
+++ b/What's_new_in_C#/C#_12.md
@@ -101,4 +101,55 @@ C# 12 버전부터, `ref readonly`를 메서드의 파라미터에 사용할 수
 이는 이전 API 코드 중  `ref` 키워드를 사용했지만 실제로는 `in` 키워드로 충분하여 범위를 줄이려는 경우,      
 호출 방식으로 인한 코드의 불필요한 수정을 막고자 도입된 것입니다.   
 
-# 기본 람다 매개변수
+# 람다 기본 매개변수
+람다 식의 매개변수에 기본값을 설정할 수 있습니다.     
+```cs
+var plus = (int num, int increment = 1) => Console.WriteLine(num + increment);
+plus(3); // 4
+plus(3, 5); // 8
+```
+
+# 모든 타입에 대한 별칭
+명명된 형식이 아닌 튜플, 배열 등에 대해서도 별칭을 적용할 수 있게 되었습니다.     
+```cs
+using CL = System.Console;
+using SList = System.Collections.Generic.List<string>;
+```
+이러한 방식으로 `using`을 사용하여 별칭을 지정하면,
+```cs
+CL.WriteLine("Hello World");
+SList sList = new SList();
+```
+다음과 같이 사용할 수 있습니다. 이러한 별칭 기능을 사용해 지나치게 긴 타입을 간편한 형태로 사용할 수 있게 되었습니다.
+
+# InlineArray 특성
+구조체에 `[InlineArray(n)]` 형태와 같이 특성을 부여하면, 배열과 비슷한 형태로 사용할 수 있습니다.    
+구조체를 기반으로 생성되기에, 배열과 달리 스택에 생성된다는 차이가 있습니다.    
+```cs
+[InlineArray(10)]
+public struct MyStruct
+{
+  int myInt; // 적어도 하나의 필드가 있어야 함
+}
+```
+```cs
+MyStruct myStruct = new MyStruct();
+for(int i = 0; i < 10; i++)
+{
+  myStruct[i] = i;
+  Console.WriteLine($"{myStruct[i]} ");
+}
+// 0 1 2 3 4 5 6 7 8 9
+```
+
+# Experimental 특성
+`Experimental` 특성은 이름 그대로, 실험적인 추가하는 기능임을 명시적으로 알리는 역할을 합니다.     
+```cs
+[Experimental("Ex")]
+public class ExClass {}
+```
+다음과 같이 `Experimental` 특성을 지정하면,
+```cs
+ExClass exClass = new ExClass(); // 에러
+```
+_'평가 목적으로 제공되며, 이후 업데이트에서 변경되거나 제거될 수 있습니다.'_ 라는 문구와 함께 에러를 일으켜 컴파일을 막을 수 있습니다.   
